--- a/manifests/external_secret.yaml
+++ b/manifests/external_secret.yaml
@@ -12,7 +12,11 @@ spec:
     name: example-sync1
     # namespace: testing
   data:
-  - secretKey: foobar
+  - secretKey: username
     remoteRef:
-      key: namespace1.secret
+      key: namespace1/janne
+      property: username
+  - secretKey: password
+    remoteRef:
+      key: namespace1/janne
       property: password
