--- a/manifests/secretstore.yaml
+++ b/manifests/secretstore.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   provider:
     webhook:
-      url: "http://gopass-external-secrets.gopass-external-secrets.svc.cluster.local/v1/parameter/{{ .remoteRef.key }}.{{ .remoteRef.property }}"
+      url: "http://gopass-external-secrets.gopass-external-secrets.svc.cluster.local/v1/parameter/{{ .remoteRef.key }}/{{ .remoteRef.property }}"
       result:
         jsonPath: "$.value"
       headers:
