--- a/manifests/kustomization.yaml
+++ b/manifests/kustomization.yaml
@@ -4,6 +4,7 @@ metadata:
   name: arbitrary
 resources:
   - namespace.yaml
+  - tmp_secret.yaml
   - deployment.yaml
   - service.yaml
   - secretstore.yaml
