--- a/manifests/secretstore.yaml
+++ b/manifests/secretstore.yaml
@@ -10,11 +10,11 @@ spec:
         jsonPath: "$.value"
       headers:
         Content-Type: application/json
-        Authorization: Basic {{ print .auth.username ":" .auth.password | b64enc }}
+        Authorization: Basic {{ print .auth.authUser ":" .auth.authPassword | b64enc }}
       secrets:
       - name: auth
         secretRef:
-          name: webhook-credentials
+          name: gopass-external-secrets-envs
           namespace: gopass-external-secrets
 ---
 apiVersion: v1
