--- a/examples/external-secret.yaml
+++ b/examples/external-secret.yaml
@@ -24,3 +24,25 @@ spec:
     remoteRef:
       key: testing/webhook-example
       property: password
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: webhook2
+  namespace: testing
+spec:
+  refreshInterval: "15s"
+  secretStoreRef:
+    name: gopass
+    kind: ClusterSecretStore
+  target:
+    name: webhook2
+  data:
+  - secretKey: username
+    remoteRef:
+      key: testing/webhook2
+      property: username
+  - secretKey: password
+    remoteRef:
+      key: testing/webhook2
+      property: password
